--- a/deployments/service/loadbalancer-aws-elb.yaml
+++ b/deployments/service/loadbalancer-aws-elb.yaml
@@ -1,3 +1,6 @@
+#This is comment
+#1st line
+#kljfslkjl
 apiVersion: v1
 kind: Service
 metadata:
@@ -6,6 +9,8 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
     service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
+    service: postrgres-rds-mq
+    service2: amazon-rds-service
 spec:
   type: LoadBalancer
   ports:
